--- a/index.html
+++ b/index.html
@@ -22,41 +22,59 @@
       </ul>
     </nav>
 
-    <div>
-      <h1>Do you know how to make COFFEE?</h1>
-      <img
-        src="https://images.unsplash.com/photo-1522120573867-e574959f84c8?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGNvZmZlfGVufDB8fDB8fHww"
-        alt=""
-      />
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, fuga cupiditate! Alias animi minima ratione,
-        laudantium excepturi esse accusantium iusto voluptate perspiciatis repellendus eius reiciendis quae, quis dolor!
-        Ad, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat necessitatibus quo amet quisquam
-        magni. Hic sint voluptatem aperiam maxime! Iusto, reprehenderit quis. Quaerat, consequatur? Quis, earum
-        quibusdam. Deleniti, similique. Libero.
-      </p>
-      <button type="button">Scopri di più</button>
-      <button type="button">Accedi</button>
-      <button type="button">Contattaci</button>
+    <div class="container-hero">
+      <div class="container-hero-card">
+        <div class="container-hero-img m-xl">
+          <img
+            src="https://images.unsplash.com/photo-1522120573867-e574959f84c8?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGNvZmZlfGVufDB8fDB8fHww"
+            alt=""
+          />
+        </div>
+        <div>
+          <h1 class="pt-xl ps-xl">Do you know how to make COFFEE?</h1>
+          <p class="pt-md ps-xl">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, fuga cupiditate! Alias animi minima ratione,
+            laudantium excepturi esse accusantium iusto voluptate perspiciatis repellendus eius reiciendis quae, quis
+            dolor! Ad, facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat necessitatibus quo amet
+            quisquam magni. Hic sint voluptatem aperiam maxime! Iusto, reprehenderit quis. Quaerat, consequatur? Quis,
+            earum quibusdam. Deleniti, similique. Libero. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Libero, consequuntur ut debitis obcaecati labore dignissimos culpa cum aliquid ex ea eaque, nisi commodi,
+            doloremque neque! Quod esse distinctio enim cupiditate!
+          </p>
+          <div class="container-hero-btn">
+            <button class="color-b pt-sm pb-sm ps-md pe-md m-xl" type="button">Scopri di più</button>
+            <button class="color-g pt-sm pb-sm ps-md pe-md m-xl" type="button">Accedi</button>
+            <button class="color-y pt-sm pb-sm ps-md pe-md m-xl" type="button">Contattaci</button>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div>
-      <img
-        src="https://images.unsplash.com/photo-1588483977150-9c2127ab7bcc?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y29mZmV8ZW58MHx8MHx8fDA%3D"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1497636577773-f1231844b336?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvZmZlfGVufDB8fDB8fHww"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1593829111182-8a237d2bb024?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt=""
-      />
-      <img
-        src="https://images.unsplash.com/photo-1514432324607-a09d9b4aefdd?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt=""
-      />
+    <div class="image-small">
+      <div>
+        <img
+          src="https://images.unsplash.com/photo-1588483977150-9c2127ab7bcc?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y29mZmV8ZW58MHx8MHx8fDA%3D"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          src="https://images.unsplash.com/photo-1497636577773-f1231844b336?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvZmZlfGVufDB8fDB8fHww"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          src="https://images.unsplash.com/photo-1593829111182-8a237d2bb024?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""
+        />
+      </div>
+      <div>
+        <img
+          src="https://images.unsplash.com/photo-1514432324607-a09d9b4aefdd?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt=""
+        />
+      </div>
     </div>
   </body>
 </html>
