animation-extra complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             alt=""
           />
         </div>
-        <div>
+        <div class="container-body">
           <h1 class="pt-xl ps-xl">Do you know how to make COFFEE?</h1>
           <p class="pt-md ps-xl">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, fuga cupiditate! Alias animi minima ratione,
